[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=7]
[ext_resource path="res://mobDeathSound.wav" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 479.5, 720, 0, 0, 0, 0, -1, 720, 0, 0, 0, 0, -1, 1 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Mob = ExtResource( 2 )
Bullet = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.423529, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.2
__meta__ = {
"_editor_description_": "Controls how often mobs spawn
"
}

[node name="ScoreTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "Increment the score each second
"
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "Give a delay before starting

Note: One shot on means only goes once wont loop?
"
}

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )
__meta__ = {
"_editor_description_": "Indicate Player posiiton before moving"
}

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -1, 1 )
rotation = -0.00207902
__meta__ = {
"_editor_description_": ""
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="BkgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MobDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
